# MayaPluginSamples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_clean.bat  commit_cmake_modules.bat  update_cmake_modules.bat
LaplacianSmoother/: CMakeLists.txt  README.md
LaplacianSmoother/doxygen/: doxygen_config
LaplacianSmoother/doxygen/CPlus/html/: _i_laplacian_data_8h_source.html  _init_plugin_8cpp.html  _laplacian_smoother_8cpp.html  _laplacian_smoother_8h.html  _laplacian_smoother_8h_source.html  _maya_eigen_8cpp.html  _maya_eigen_8h.html  _maya_eigen_8h_source.html  _mesh_laplacian_data_8h_source.html  _time_counter_8h.html  _time_counter_8h_source.html  annotated.html  class_i_laplacian_data-members.html  class_i_laplacian_data.html  class_laplacian_smoother-members.html  class_laplacian_smoother.html  class_maya_eigen-members.html  class_maya_eigen.html  class_mesh_laplacian_data-members.html  class_mesh_laplacian_data.html  class_time_counter-members.html  class_time_counter.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html
LaplacianSmoother/doxygen/CPlus/html/search/: all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_8.js  functions_9.js  search.js  variables_0.js  variables_1.js
LaplacianSmoother/doxygen/CPlus/latex/: _init_plugin_8cpp.tex  _laplacian_smoother_8cpp.tex  _laplacian_smoother_8h.tex  _maya_eigen_8cpp.tex  _maya_eigen_8h.tex  _time_counter_8h.tex  annotated.tex  class_i_laplacian_data.eps  class_i_laplacian_data.tex  class_laplacian_smoother.eps  class_laplacian_smoother.tex  class_maya_eigen.tex  class_mesh_laplacian_data.eps  class_mesh_laplacian_data.tex  class_time_counter.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  refman.tex
LaplacianSmoother/src/: ILaplacianData.cpp  ILaplacianData.h  InitPlugin.cpp  LaplacianSmoother.cpp  LaplacianSmoother.h  MayaEigen.cpp  MayaEigen.h  MeshLaplacianData.cpp  MeshLaplacianData.h  TimeCounter.cpp  TimeCounter.h
NoiseCmd/: CMakeLists.txt  README.md  cmake_clean.bat  cmake_generate.bat
NoiseCmd/cmake/: FindMaya.cmake  MSVCProperties.cmake
NoiseCmd/doxygen/: doxygen_config
NoiseCmd/src/: NoiseCmd.cpp
NoiseDeformer/: CMakeLists.txt  README.md
NoiseDeformer/doxygen/: doxygen_config
NoiseDeformer/src/: InitPlugin.cpp  NoiseDeformer.cpp  NoiseDeformer.h
OpenMeshCmd/: CMakeLists.txt  README.md
OpenMeshCmd/doxygen/: doxygen_config
OpenMeshCmd/src/: OpenMeshCmd.cpp
batch/: batch.py
cmake/: FindEigen.cmake  FindMaya.cmake  MSVCProperties.cmake  SetupExtLibs.cmake
toolUI/python/: tool_ui.py
toolUI/scripts/python/: tool_ui.py
